fix: fix cross browser bottom whitespace issue

--- a/Travel Guide/style.css
+++ b/Travel Guide/style.css
@@ -32,6 +32,7 @@ body {
     margin: 0;
     padding: 0 0;
     color: #fff;
+    max-height: 100%;
 }
 
 a {
